# bonsai-connector

./: MANIFEST.in  README.md  pyproject.toml
src/bonsai_connector/: __init__.py  connector.py  logger.py
src/bonsai_connector/schema/: siminterface.schema.json
tests/: test_bonsai_connector.py
