[project]
name = "bonsai_connector"
version = "0.0.1"
authors = [
  { name="Marco Zatta", email="marco.zatta@microsoft.com" },
]
description = "Easily connect python simulation to Bonsai"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "microsoft-bonsai-api>=0.1<0.2",
]

[project.urls]
"Homepage" = "https://github.com/mzat-msft/bonsai-connector"
"Bug Tracker" = "https://github.com/mzat-msft/bonsai-connector"
